# CSC8508

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AiStatemachineObject.cpp  AiStatemachineObject.h  CMakeLists.txt  CSC8503.sln  Generate.bat  README.md  TextFile1.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Assets/Data/: Map.txt  Maze2.txt  TestGrid1.txt
Assets/LevelData/: Level_0.csv  Level_1.csv
Assets/Meshes/: Male_Guard_Gunfire.anm  Male_Guard_GunfireRifle.anm  Male_Guard_Happy.anm  Male_Guard_StepForwardGun.anm  Male_Guard_StepForwardRifle.anm  Rig_Maximilian_Idle.anm  Rig_Maximilian_Incentivise.anm  Rig_Maximilian_SingleShot.anm  Rig_Maximilian_Walk2.anm  Role_T.mat  Walk.anm
Assets/Shaders/: DirectionalFragment.glsl  PointFragment.glsl  PointlVertex.glsl  ReinhardTonemap.frag  SpotFragment.glsl  SpotVertex.glsl  basic.vert  blackhole.frag  blackhole.vert  frostPostProcessing.frag  frostPostProcessing.vert  gammaCorrection.frag  gbuffer.frag  lightingCalculation.frag  particleDefault.vert  particleMoving.frag  pbr.frag  pbr.vert  pbrInstanced.vert  portal.frag  portal.vert  scene.frag  sceneInstance.vert  sceneNoShadow.frag  skeletalAnimationSkinning.vert  skeletalAnimationSkinning_pbr.vert  skeletalAnimationTexture.frag  skeletalAnimationTexture_pbr.frag  skybox.vert  skyboxGPass.frag  targethole.frag  zxFragment.glsl  zxVertex.glsl
Assets/Shaders/DefferedRendering/: CombineBuffer.frag  DirectionalLight.frag  PointLight.frag  PointLight.vert  ScreenQuad.vert
Assets/Shaders/OGL/: gammaCorrectedtextureFragment.glsl
Assets/Shaders/PSSL/: Bindless.psslh  DebugLine_p.pssl  DebugLine_vv.pssl  DebugText_p.pssl  DebugText_vv.pssl  Interop.h  PBR_p.pssl  PBR_vv.pssl  PixelShader_p.pssl  ShaderConstants.psslh  Shadow_p.pssl  Shadow_vv.pssl  Skinning.psslh  Skybox_p.pssl  Skybox_vv.pssl  TechObject.psslh  Tech_p.pssl  Tech_vv.pssl  Vertex.psslh  VertexAttributes.psslh  VertexShader_vv.pssl  gamma_c.pssl  skinning_c.pssl
Assets/Shaders/VK/: scene.frag
Assets/Textures/: 2.jpg.gnf  BlackHolePS5.png.gnf  BlackHolePS51.png.gnf  Blank.png.gnf  Checkerboard.gnf  Default.png.gnf  GoatBlack.png.gnf  GoatBlack2.png.gnf  GoatBody.png.gnf  GoatBrown.png.gnf  PortalPS5.png.gnf  PortalPS51.png.gnf  PortalTex.jpg.gnf  PressStart2P.png.gnf  blackhole.png.gnf  doge.png.gnf
Assets/Textures/Cubemap/: skyrender0001.png.gnf  skyrender0002.png.gnf  skyrender0003.png.gnf  skyrender0004.png.gnf  skyrender0005.png.gnf  skyrender0006.png.gnf
Assets/Textures/GrassWithRock01/: albedo.png.gnf  ao.png.gnf  grass_with_rocks_01_height_1k.png.gnf  grass_with_rocks_01_normal_dx_1k.png.gnf  license.txt  (+3 more)
CSC8503/: AiStatemachineObject.cpp  AiStatemachineObject.h  AiTreeObject.cpp  AiTreeObject.h  ApplicationState.cpp  ApplicationState.h  AudioEngine.cpp  AudioEngine.h  BaseTextureManager.cpp  BaseTextureManager.h  BouncePad.cpp  BouncePad.h  Bullet.cpp  Bullet.h  BumpAllocator.h  CMakeLists.txt  CSC8503.vcxproj  CSC8503.vcxproj.filters  DebugHUD.cpp  DebugHUD.h  DirectionalLight.h  Event.cpp  Event.h  EventType.h  FrameData.h  GameAnimation.cpp  GameAnimation.h  GameTechAGCModel.cpp  GameTechAGCModel.h  GameTechAGCRenderer.cpp  GameTechAGCRenderer.h  GameTechRenderer.cpp  GameTechRenderer.h  GameTechRendererInterface.h  Goose.cpp  Goose.h  GravityWell.cpp  GravityWell.h  Hole.cpp  Hole.h  (+60 more)
CSC8503/CSC8503.dir/Debug/: CSC8503.exe.recipe  std.compat.ixx.ifc  std.compat.ixx.ifc.d.json  std.compat.ixx.ifc.dt.module.json.command  std.compat.ixx.module.json  std.ixx.ifc.dt.module.json.command  std.ixx.module.json
CSC8503/CSC8503.dir/Debug/CSC8503.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CSC8503.lastbuildstate  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CSC8503/CSC8503.dir/Debug/CSC8503_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
CSC8503/CSC8503.dir/Release/: CSC8503.exe.recipe  CSC8503.ipdb
CSC8503/CSC8503.dir/Release/CSC8503.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CSC8503/LevelData/: Level_0.csv
CSC8503/x64/Debug/SHADER_FILES/: SHADER_FILES.recipe
CSC8503/x64/Debug/SHADER_FILES/SHADER_FILES.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  SHADER_FILES.lastbuildstate
CSC8503CoreClasses/: .gitignore  AABBVolume.h  BehaviourNode.h  BehaviourParallel.cpp  BehaviourParallel.h  BehaviourSelector.cpp  BehaviourSelector.h  BehaviourSequence.h  CMakeLists.txt  CSC8503CoreClasses.vcxproj  CSC8503CoreClasses.vcxproj.filters  CapsuleVolume.h  CollisionDetection.cpp  CollisionDetection.h  CollisionVolume.h  Debug.cpp  DirectionalLight.cpp  DirectionalLight.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  GameWorld.cpp  GameWorld.h  Helper.cpp  Helper.h  Light.h  NavigationGrid.cpp  NavigationGrid.h  NavigationPath.h  NetworkBase.cpp  NetworkBase.h  NetworkObject.cpp  NetworkObject.h  NetworkState.h  OBBVolume.h  OrientationConstraint.cpp  ParallelBehaviour.h  (+19 more)
CSC8503CoreClasses/enet/: peer.c  unix.c
Dependencies/: .gitignore
GLTFLoader/: .gitignore  CMakeLists.txt  GLTFLoader.cpp  GLTFLoader.h  README.md
NCLCoreClasses/: .gitignore  Buffer.h  CMakeLists.txt  Camera.cpp  Keyboard.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Mesh.cpp  Mesh.h  MeshMaterial.h  MshLoader.cpp  MshLoader.h  NewVector.h  Quaternion.cpp  Quaternion.h  RendererBase.h  Shader.cpp  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  Win32Window.cpp  Win32Window.h  Window.cpp  Window.h
OpenGLRendering/: OGLMesh.cpp  OGLMesh.h  OGLRenderer.cpp  OGLRenderer.h  OGLTexture.cpp  OGLTexture.h  OpenGLRendering.vcxproj  OpenGLRendering.vcxproj.filters
Steamworksdk/steamworksexample/: SteamworksExample.sln  SteamworksExample.vcxproj  SteamworksExample.vcxproj.filters
x64/Debug/: imgui.ini
(+163 files in other folders)
